# $Id$

applicationdir = $(datadir)/applications
dist_application_DATA = CryptoTE.desktop

mimelnkdir = $(datadir)/mimelnk/application
dist_mimelnk_DATA = x-encrypted-container.desktop

mimedir = $(datadir)/mime/packages
dist_mime_DATA = cryptote.xml

pixmapsdir = $(datadir)/pixmaps
dist_pixmaps_DATA = cryptote.png cryptote_container.png
