################################################################################
# desktop/Makefile.am
#
# Part of CryptoTE v0.5.999, see http://panthema.net/2007/cryptote
#
# Copyright (C) 2008-2014 Timo Bingmann <tb@panthema.net>
#
# This program is free software; you can redistribute it and/or modify it under
# the terms of the GNU General Public License as published by the Free Software
# Foundation; either version 2 of the License, or (at your option) any later
# version.
#
# This program is distributed in the hope that it will be useful, but WITHOUT
# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with
# this program; if not, write to the Free Software Foundation, Inc., 59 Temple
# Place, Suite 330, Boston, MA 02111-1307 USA
################################################################################

applicationdir = $(datadir)/applications
dist_application_DATA = CryptoTE.desktop

mimelnkdir = $(datadir)/mimelnk/application
dist_mimelnk_DATA = x-encrypted-container.desktop

mimedir = $(datadir)/mime/packages
dist_mime_DATA = cryptote.xml

pixmapsdir = $(datadir)/pixmaps
dist_pixmaps_DATA = cryptote.png cryptote_container.png
