# $Id$

noinst_LIBRARIES = libstc.a

libstc_a_SOURCES = \
	scintilla/include/Accessor.h \
	scintilla/include/KeyWords.h \
	scintilla/include/Platform.h \
	scintilla/include/PropSet.h \
	scintilla/include/SString.h \
	scintilla/include/SciLexer.h \
	scintilla/include/Scintilla.h \
	scintilla/include/ScintillaWidget.h \
	scintilla/include/WindowAccessor.h \
	scintilla/include/Face.py \
	scintilla/include/HFacer.py \
	scintilla/include/Scintilla.iface \
	\
	scintilla/src/AutoComplete.cxx \
	scintilla/src/AutoComplete.h \
	scintilla/src/CallTip.cxx \
	scintilla/src/CallTip.h \
	scintilla/src/CellBuffer.cxx \
	scintilla/src/CellBuffer.h \
	scintilla/src/CharClassify.cxx \
	scintilla/src/CharClassify.h \
	scintilla/src/CharacterSet.h \
	scintilla/src/ContractionState.cxx \
	scintilla/src/ContractionState.h \
	scintilla/src/Decoration.cxx \
	scintilla/src/Decoration.h \
	scintilla/src/Document.cxx \
	scintilla/src/Document.h \
	scintilla/src/DocumentAccessor.cxx \
	scintilla/src/DocumentAccessor.h \
	scintilla/src/Editor.cxx \
	scintilla/src/Editor.h \
	scintilla/src/ExternalLexer.cxx \
	scintilla/src/ExternalLexer.h \
	scintilla/src/Indicator.cxx \
	scintilla/src/Indicator.h \
	scintilla/src/KeyMap.cxx \
	scintilla/src/KeyMap.h \
	scintilla/src/KeyWords.cxx \
	scintilla/src/LexAPDL.cxx \
	scintilla/src/LexASY.cxx \
	scintilla/src/LexAU3.cxx \
	scintilla/src/LexAVE.cxx \
	scintilla/src/LexAbaqus.cxx \
	scintilla/src/LexAda.cxx \
	scintilla/src/LexAsm.cxx \
	scintilla/src/LexAsn1.cxx \
	scintilla/src/LexBaan.cxx \
	scintilla/src/LexBash.cxx \
	scintilla/src/LexBasic.cxx \
	scintilla/src/LexBullant.cxx \
	scintilla/src/LexCLW.cxx \
	scintilla/src/LexCPP.cxx \
	scintilla/src/LexCSS.cxx \
	scintilla/src/LexCaml.cxx \
	scintilla/src/LexCmake.cxx \
	scintilla/src/LexConf.cxx \
	scintilla/src/LexCrontab.cxx \
	scintilla/src/LexCsound.cxx \
	scintilla/src/LexD.cxx \
	scintilla/src/LexEScript.cxx \
	scintilla/src/LexEiffel.cxx \
	scintilla/src/LexErlang.cxx \
	scintilla/src/LexFlagship.cxx \
	scintilla/src/LexForth.cxx \
	scintilla/src/LexFortran.cxx \
	scintilla/src/LexGAP.cxx \
	scintilla/src/LexGen.py \
	scintilla/src/LexGui4Cli.cxx \
	scintilla/src/LexHTML.cxx \
	scintilla/src/LexHaskell.cxx \
	scintilla/src/LexInno.cxx \
	scintilla/src/LexKix.cxx \
	scintilla/src/LexLisp.cxx \
	scintilla/src/LexLout.cxx \
	scintilla/src/LexLua.cxx \
	scintilla/src/LexMagik.cxx \
	scintilla/src/LexMMIXAL.cxx \
	scintilla/src/LexMPT.cxx \
	scintilla/src/LexMSSQL.cxx \
	scintilla/src/LexMatlab.cxx \
	scintilla/src/LexMetapost.cxx \
	scintilla/src/LexNsis.cxx \
	scintilla/src/LexOpal.cxx \
	scintilla/src/LexOthers.cxx \
	scintilla/src/LexPB.cxx \
	scintilla/src/LexPLM.cxx \
	scintilla/src/LexPOV.cxx \
	scintilla/src/LexPowerShell.cxx \
	scintilla/src/LexPS.cxx \
	scintilla/src/LexPascal.cxx \
	scintilla/src/LexPerl.cxx \
	scintilla/src/LexProgress.cxx \
	scintilla/src/LexPython.cxx \
	scintilla/src/LexR.cxx \
	scintilla/src/LexRebol.cxx \
	scintilla/src/LexRuby.cxx \
	scintilla/src/LexSQL.cxx \
	scintilla/src/LexScriptol.cxx \
	scintilla/src/LexSmalltalk.cxx \
	scintilla/src/LexSpecman.cxx \
	scintilla/src/LexSpice.cxx \
	scintilla/src/LexTADS3.cxx \
	scintilla/src/LexTCL.cxx \
	scintilla/src/LexTeX.cxx \
	scintilla/src/LexVB.cxx \
	scintilla/src/LexVHDL.cxx \
	scintilla/src/LexVerilog.cxx \
	scintilla/src/LexYAML.cxx \
	scintilla/src/LineMarker.cxx \
	scintilla/src/LineMarker.h \
	scintilla/src/Partitioning.h \
	scintilla/src/PositionCache.cxx \
	scintilla/src/PositionCache.h \
	scintilla/src/PropSet.cxx \
	scintilla/src/RESearch.cxx \
	scintilla/src/RESearch.h \
	scintilla/src/RunStyles.cxx \
	scintilla/src/RunStyles.h \
	scintilla/src/SVector.h \
	scintilla/src/ScintillaBase.cxx \
	scintilla/src/ScintillaBase.h \
	scintilla/src/SplitVector.h \
	scintilla/src/Style.cxx \
	scintilla/src/Style.h \
	scintilla/src/StyleContext.cxx \
	scintilla/src/StyleContext.h \
	scintilla/src/UniConversion.cxx \
	scintilla/src/UniConversion.h \
	scintilla/src/ViewStyle.cxx \
	scintilla/src/ViewStyle.h \
	scintilla/src/WindowAccessor.cxx \
	scintilla/src/XPM.cxx \
	scintilla/src/XPM.h \
	\
	PlatWX.cpp \
	PlatWX.h \
	ScintillaWX.cpp \
	ScintillaWX.h \
	stc.cpp \
	stc.h

EXTRA_DIST = README.txt \
	scintilla/README \
	scintilla/License.txt \
	scintilla/doc/*

AM_CFLAGS = -W -Wall -D__WX__ -DSCI_LEXER -DLINK_LEXERS -DSCI_NAMESPACE -I$(srcdir)/scintilla/include -I$(srcdir)/scintilla/src $(WX_CFLAGS)
AM_CXXFLAGS = -W -Wall -D__WX__ -DSCI_LEXER -DLINK_LEXERS -DSCI_NAMESPACE -I$(srcdir)/scintilla/include -I$(srcdir)/scintilla/src $(WX_CXXFLAGS)
